--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       </div>
     </div>
 
+    <a href="https://github.com/Root-1/flashcards"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
     <script src="jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="openminds_connect.js" type="text/javascript" charset="utf-8"></script>
     <script src="flashcards.js" type="text/javascript" charset="utf-8"></script>
